
5.2b1 -> 5.3a1
    - jbj: js: fix: sort out module <-> library targets.
    - jbj: js: fix: make dependencies prevented "make distcheck".
    - jbj: ruby: rescusitate.
    - jbj: i18n: update po files (Translation Project).
    - jbj: i18n: update POTFILES.in.
    - jbj: js: fix: give print() a "" return value instead of JSVAL_VOID.
    - jbj: cli: fix: --eval could access before beginning of array.
    - jbj: ficl: resurrect as --with-ficl=internal. external is wonky w no *.la.
    - jbj: perl: rescuscitate embedding (w /etc/ld.so.conf.d/perl.conf assist).
    - jbj: js: build jscpucfg/jskwgen helpers w/o libtool assistance.
    - jbj: lua: build bin2c helper w/o libtool assistance.
    - jbj: rc: rescusictate.
    - jbj: macros: add a few more rpm-peculier execuctables.
    - jbj: mtree: avoid mtime.tv_usecs differences for now.
    - jbj: pubkeys: fix: all headers, including pubkeys, need PACKAGECOLOR.
    - jbj: pubkeys: fix: rpmdbAdd() needs to be transactionally protected.
    - jbj: cudf: fiddle up some methods for cudftool-equiv in JS.
    - jbj: cudf: move rpmcudp/rpmcudv typedef's and structures into rpmcudf.h.
    - jbj: cudf: add JS methods and some silly unit tests.
    - jbj: cudf: build & install cudftool iff --with-cudf AutoFu.
    - jbj: cudf: move cudftool innards to -lrpmio. silly methods atm, todo++.
    - jbj: cudf: stub-in cudftool with -lcudf AutoFu.
    - jbj: change sonames to 5.3.
    - jbj: rpmbf: estimate optimal {m,k} parameters given {n,e}.
    - jbj: mire: fix: use strncmp, rpmdb string keys are not NUL terminated.
    - rpm.org: port addFingerprints.
    - rpm.org: port a copy of fpLookupSubdir.
    - jbj: rpmdb: Stub-in RPMDBI_REPACKAGES/RPMDBI_REPOSITORY stores.
    - jbj: rpmdb: Eliminate RPMDBI_LABEL. Use RPMTAG_NVRA instead.
    - jbj: rpmmi: Prepare for multiple primary stores w mi_index -> mi_primary.
    - jbj: dbi: Prepare for multiple primary stores w dbi_index -> dbi_primary.